k8s/istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cinema-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "cinemaservice"
spec:
  hosts:
  - "*"
  gateways:
  - cinema-gateway
  http:
  - match:
    - uri:
        exact: /movies
    route:
    - destination:
        host: "cinema-movies-svc"
        port:
          number: 80
  - match:
    - uri:
        exact: /bookings
    route:
    - destination:
        host: "cinema-bookings-svc"
        port:
          number: 80
  - match:
    - uri:
        exact: /users
    route:
    - destination:
        host: "cinema-users-svc"
        port:
          number: 80
  - match:
    - uri:
        exact: /showtimes
    route:
    - destination:
        host: "cinema-showtimes-svc"
        port:
          number: 80
